--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       <div class="col-md-5 col-xs-12 mb-30">
                         <img
                           class="candidate-img mb-35"
-                          src="https://avatars2.githubusercontent.com/u/26687933?s=460&amp;v=4"
+                          src="./img/IMG_3737.jpg"
                         />
                         <ul class="social-icons">
                           <li>
