--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     />
     <title>Dre Taylor</title>
     <meta name="title" content="Dre Taylor" />
-    <meta
-      name="description"
-      content="Developer • Otaku • Learner Although A Data engineer looking forward to Share and Gain knowledgeable stuff"
-    />
     <meta name="author" content="Dre Taylor" />
     <meta name="language" content="English" />
     <meta name="robots" content="index, follow" />
@@ -67,11 +63,7 @@
     />
     <meta property="og:title" content="Dre Taylor" />
     <meta property="og:site_name" content="Dre Taylor" />
-    <meta property="og:url" content="https://ptprashanttripathi.github.io" />
-    <meta
-      property="og:description"
-      content="Developer • Otaku • Learner Although A Data engineer looking forward to Share and Gain knowledgeable stuff"
-    />
+
     <meta property="og:type" content="profile" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -145,14 +137,9 @@
                 >
               </li>
               <li class="mdl-menu__item">
-                <a href="mailto:ptprashanttripathi@outlook.com"
+                <a href="mailto:drtaylor.gt@gmail.com"
                   ><i class="zmdi zmdi-email-open font-green pr-10"></i>Drop me
                   an Mail</a
-                >
-              </li>
-              <li class="mdl-menu__item">
-                <a href="https://t.me/ptprashanttripathi"
-                  ><i class="zmdi zmdi-phone font-blue pr-10"></i>Telegram Me</a
                 >
               </li>
             </ul>
@@ -169,7 +156,7 @@
                 <li>
                   <a
                     class="linkedin-link"
-                    href="https://www.linkedin.com/in/ptprashanttripathi/"
+                    href="https://www.linkedin.com/in/dre-taylor-49a14a75/"
                   >
                     <i id="tt13" class="zmdi zmdi-linkedin"></i>
                     <div class="mdl-tooltip" data-mdl-for="tt13">linkedin</div>
@@ -178,19 +165,10 @@
                 <li>
                   <a
                     class="github-link"
-                    href="https://github.com/PtPrashantTripathi"
+                    href="https://github.com/drtaylor93"
                   >
                     <i id="tt14" class="zmdi zmdi-github"></i>
                     <div class="mdl-tooltip" data-mdl-for="tt14">github</div>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="instagram-link"
-                    href="https://www.instagram.com/ptprashanttripathi/"
-                  >
-                    <i id="tt15" class="zmdi zmdi-instagram"></i>
-                    <div class="mdl-tooltip" data-mdl-for="tt15">instagram</div>
                   </a>
                 </li>
               </ul>
@@ -270,7 +248,7 @@
                           <li>
                             <a
                               class="linkedin-link"
-                              href="https://www.linkedin.com/in/ptprashanttripathi/"
+                              href="https://www.linkedin.com/in/dre-taylor-49a14a75/"
                             >
                               <i id="tt3" class="zmdi zmdi-linkedin"></i>
                               <div class="mdl-tooltip" data-mdl-for="tt3">
@@ -280,19 +258,8 @@
                           </li>
                           <li>
                             <a
-                              class="instagram-link"
-                              href="https://www.instagram.com/ptprashanttripathi/"
-                            >
-                              <i id="tt5" class="zmdi zmdi-instagram"></i>
-                              <div class="mdl-tooltip" data-mdl-for="tt5">
-                                instagram
-                              </div>
-                            </a>
-                          </li>
-                          <li>
-                            <a
                               class="github-link"
-                              href="https://github.com/PtPrashantTripathi"
+                              href="https://github.com/drtaylor93"
                             >
                               <i id="tt4" class="zmdi zmdi-github"></i>
                               <div class="mdl-tooltip" data-mdl-for="tt4">
@@ -306,7 +273,7 @@
                         <div class="info-wrap">
                           <h1>Dre Taylor</h1>
                           <h5 class="mt-20 font-grey">
-                            Developer • Otaku • Learner
+                            Software Developer • Cybersecurity Analyst
                           </h5>
                           <div class="mt-30">
                             <a
@@ -319,7 +286,7 @@
                               class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white"
                               href="#contact_sec"
                               data-scroll
-                              >contact</a
+                              >Contact</a
                             >
                           </div>
                         </div>
@@ -328,7 +295,7 @@
                             <div class="profile-title">
                               &#128104; &#8205; &#127891; Experience Level :
                             </div>
-                            6+ years
+                            5+ years
                           </li>
                           <li>
                             <div class="profile-title">
@@ -343,13 +310,12 @@
                             Technology, Astronomy, Space
                           </li>
                           <li>
-                            <div class="profile-title">💡 Equipments :</div>
-                            Sarcasm, Knowledge, python, C, nodejs, PHP, webdev,
-                            Linux
+                            <div class="profile-title">💡 Development Languages :</div>
+                            Rust, Python, Javascript, Go, React
                           </li>
                           <li>
                             <div class="profile-title">&#x26a1; Fun fact :</div>
-                            Prefer Chai &#9749; over coffee
+                            Avid marathon runner
                           </li>
                         </ul>
                       </div>
@@ -367,40 +333,18 @@
                     <i class="zmdi zmdi-code font-blue profile-icon"></i>
                     <h4 class="mb-15">Developer</h4>
                     <p>
-                      I am a data engineer with 2+ years of experience working
-                      on Azure cloud. have a strong background in ETL processes
-                      and have successfully completed multiple projects
-                      involving data ingestion, transformation, and loading.
-                      highly proficient in Python and have a strong
-                      understanding of SQL and data management principles. able
-                      to work effectively in both individual and team
+                      I am a software engineer with 5+ years of experience working
+                      with customer facing applications and have completed multiple projects
+                      involving oauth flows, client authentication, and security.
+                      Highly proficient in Python and have a strong
+                      understanding of SQL and data management principles. Experienced
+                      in working effectively in both individual and team
                       environments and am committed to delivering high-quality
                       results.
                     </p>
                   </div>
                 </div>
-                <div class="col-md-4 col-xs-12 mb-30">
-                  <div class="mdl-card mdl-shadow--2dp text-center">
-                    <i
-                      class="zmdi zmdi-format-color-text font-green profile-icon"
-                    ></i>
-                    <h4 class="mb-15">Otaku</h4>
-                    <p>
-                      I am an Otaku, which is a term used to describe someone
-                      who is deeply passionate about anime and manga. As an
-                      Otaku, I have a deep appreciation for the art,
-                      storytelling, and cultural significance of these mediums.
-                      I enjoy immersing myself in the rich and diverse world of
-                      anime and manga, and I am always eager to learn more about
-                      new series and creators. My love for Otaku culture goes
-                      beyond just consuming media, as I also enjoy participating
-                      in fan communities and events, and sharing my enthusiasm
-                      with others. Being an Otaku is a big part of my identity,
-                      and I am proud to be a part of this vibrant and creative
-                      community..
-                    </p>
-                  </div>
-                </div>
+
                 <div class="col-md-4 col-xs-12 mb-30">
                   <div class="mdl-card mdl-shadow--2dp text-center">
                     <i class="zmdi zmdi-book font-yellow profile-icon"></i>
