--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     href="#body"
                   >
                     <i class="zmdi zmdi-border-color pr-15"></i>
-                    <span class="font-capitalize">about</span>
+                    <span class="font-capitalize">About</span>
                   </a>
                 </li>
                 <li>
@@ -212,7 +212,7 @@
                     href="#project_sec"
                   >
                     <i class="zmdi zmdi-code pr-15"></i>
-                    <span class="font-capitalize">projects</span>
+                    <span class="font-capitalize">Projects</span>
                   </a>
                 </li>
                 <li>
@@ -228,7 +228,7 @@
               </ul>
             </div>
             <div class="drawer-footer mt-50 mb-30 text-center">
-              <p class="font-12 mt-10">Dre Taylor &copy; 2020.</p>
+              <p class="font-12 mt-10">Dre Taylor &copy;</p>
             </div>
           </div>
         </div>
@@ -301,13 +301,13 @@
                             <div class="profile-title">
                               💻 I’m currently watching
                             </div>
-                            One piece 🚀
+                             
                           </li>
                           <li>
                             <div class="profile-title">
                               &#129513; Interested in :
                             </div>
-                            Technology, Astronomy, Space
+                            Technology, Health, Travel
                           </li>
                           <li>
                             <div class="profile-title">💡 Development Languages :</div>
@@ -350,15 +350,12 @@
                     <i class="zmdi zmdi-book font-yellow profile-icon"></i>
                     <h4 class="mb-15">Learner</h4>
                     <p>
-                      I am constantly learning and growing in my field. I am
+                      I am constantly learning and growing in and out of my field. I am
                       passionate about creating innovative solutions and using
                       technology to solve real-world problems. I have a strong
-                      foundation in programming languages such as Java and
+                      foundation in programming languages such as Go and
                       Python, and am always eager to expand my skillset and take
-                      on new challenges. Whether I am working on a solo project
-                      or collaborating with a team, I thrive in a fast-paced and
-                      dynamic environment. I am excited to continue my career as
-                      a developer and make a positive impact in the tech
+                      on new challenges.
                       industry.
                     </p>
                   </div>
@@ -423,7 +420,7 @@
               <div class="row" id="repo-card"><!--js will put data here--></div>
             </section>
             <section id="contact_sec" class="contact-sec sec-pad-top-sm">
-              <h2 class="mb-35">contact</h2>
+              <h2 class="mb-35">Contact</h2>
               <div class="row">
                 <div id="form_card_height" class="col-sm-12 mb-30">
                   <div class="mdl-card mdl-shadow--2dp text-center">
@@ -456,7 +453,7 @@
                       <li>
                         <a
                           class="github-link"
-                          href="https://www.github.com/ptprashanttripathi/"
+                          href="https://github.com/drtaylor93"
                         >
                           <i id="tt9" class="zmdi zmdi-github" tabindex="0"></i>
                           <div
