--- a/index.html
+++ b/index.html
@@ -296,12 +296,6 @@
                           </li>
                           <li>
                             <div class="profile-title">
-                              💻 I’m currently watching
-                            </div>
-                             
-                          </li>
-                          <li>
-                            <div class="profile-title">
                               &#129513; Interested in :
                             </div>
                             Technology, Health, Travel
@@ -323,7 +317,7 @@
             </section>
             <!--/About Sec-->
             <section id="portfolio_sec" class="profile-sec sec-pad-top-sm">
-              <h2 class="mb-30">what i do</h2>
+              <h2 class="mb-30">What I do</h2>
               <div class="row">
                 <div class="col-md-4 col-xs-12 mb-30">
                   <div class="mdl-card mdl-shadow--2dp text-center">
@@ -359,59 +353,6 @@
                 </div>
               </div>
             </section>
-            <!-- <section id="interest_sec" class="interest-sec sec-pad-top-sm">
-              <h2 class="mb-30">interests</h2>
-              <div class="row">
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-tv"></i>
-                    <span>movie</span>
-                  </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-radio"></i>
-                    <span>music</span>
-                  </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-smartphone"></i>
-                    <span>gaming</span>
-                  </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-camera"></i>
-                    <span>photography</span>
-                  </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-library"></i>
-                    <span>reading</span>
-                  </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
-                  <div
-                    class="mdl-card mdl-shadow--2dp text-center pa-20 pt-30 pb-30"
-                  >
-                    <i class="zmdi zmdi-airplane"></i>
-                    <span>traveling</span>
-                  </div>
-                </div>
-              </div>
-            </section>
             <section id="project_sec" class="blog-sec sec-pad-top-sm"> -->
               <h2 class="mb-30">Projects and Work</h2>
               <div class="row" id="repo-card"><!--js will put data here--></div>
@@ -421,7 +362,6 @@
               <div class="row">
                 <div id="form_card_height" class="col-sm-12 mb-30">
                   <div class="mdl-card mdl-shadow--2dp text-center">
-                    <h4 class="mb-10 font-unsetcase">Find me on.</h4>
                     <ul class="social-icons mt-10">                       
                       <li>
                         <a
