--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="title" content="Dre Taylor" />
     <meta name="author" content="Dre Taylor" />
     <meta name="language" content="English" />
-    <link
+    <!-- <link
       rel="icon"
       type="image/png"
       href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=196"
@@ -40,10 +40,10 @@
       type="image/png"
       href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=128"
       sizes="128x128"
-    />
+    /> -->
     <meta name="application-name" content="Dre Taylor&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta
+    <!-- <meta
       name="msapplication-TileImage"
       content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=144"
     />
@@ -58,11 +58,10 @@
     <meta
       name="msapplication-square310x310logo"
       content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=310"
-    />
+    /> -->
     <meta property="og:title" content="Dre Taylor" />
     <meta property="og:site_name" content="Dre Taylor" />
 
-    <meta property="og:type" content="profile" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
