--- a/index.html
+++ b/index.html
@@ -7,60 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Dre Taylor</title>
-    <meta name="title" content="Dre Taylor" />
+    <title>Dre Taylor Portfolio</title>
+    <meta name="title" content="Dre Taylor Portfolio" />
     <meta name="author" content="Dre Taylor" />
     <meta name="language" content="English" />
-    <!-- <link
-      rel="icon"
-      type="image/png"
-      href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=196"
-      sizes="196x196"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=96"
-      sizes="96x96"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=32"
-      sizes="32x32"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=16"
-      sizes="16x16"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://avatars2.githubusercontent.com/u/26687933?v=4&s=128"
-      sizes="128x128"
-    /> -->
-    <meta name="application-name" content="Dre Taylor&nbsp;" />
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <!-- <meta
-      name="msapplication-TileImage"
-      content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=144"
-    />
-    <meta
-      name="msapplication-square70x70logo"
-      content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=70"
-    />
-    <meta
-      name="msapplication-square150x150logo"
-      content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=150"
-    />
-    <meta
-      name="msapplication-square310x310logo"
-      content="https://avatars2.githubusercontent.com/u/26687933?v=4&s=310"
-    /> -->
-    <meta property="og:title" content="Dre Taylor" />
-    <meta property="og:site_name" content="Dre Taylor" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -83,7 +33,7 @@
         <header class="mdl-layout__header">
           <div class="mdl-layout__header-row mdl-scroll-spy-1">
             <a href="index.html"
-              ><span class="mdl-layout-title">Dre Taylor</span></a
+              ></a
             >
             <div class="mdl-layout-spacer"></div>
             <ul class="nav mdl-navigation mdl-layout--large-screen-only">
@@ -102,17 +52,17 @@
               </li>
               <li>
                 <a class="mdl-navigation__link" data-scroll href="#interest_sec"
-                  >interest</a
+                  >Interest</a
                 >
               </li>
               <li>
                 <a class="mdl-navigation__link" data-scroll href="#project_sec"
-                  >project</a
+                  >Project</a
                 >
               </li>
               <li>
                 <a class="mdl-navigation__link" data-scroll href="#contact_sec"
-                  >contact</a
+                  >Contact</a
                 >
               </li>
             </ul>
@@ -135,8 +85,8 @@
               </li>
               <li class="mdl-menu__item">
                 <a href="mailto:drtaylor.gt@gmail.com"
-                  ><i class="zmdi zmdi-email-open font-green pr-10"></i>Drop me
-                  an Mail</a
+                  ><i class="zmdi zmdi-email-open font-green pr-10"></i>Contact me
+                  via email</a
                 >
               </li>
             </ul>
