--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             >
               <li class="mdl-menu__item">
                 <a
-                  href="https://drive.google.com/file/d/1J79L3laKdUfjyP44nHjJ6E50oFebs5if/view?usp=drivesdk"
+                  href="https://www.dropbox.com/scl/fi/v6chalg4wg2msl793axgm/5-22-DreTaylorResume.pdf?rlkey=kh8p13v7pd1psrsj6wz0dgdkm&dl=0"
                   ><i class="zmdi zmdi-download font-red pr-10"></i>Download
                   Resume</a
                 >
